--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
 		<a class="nav-link" href="{{ url_for('analytics') }}"> Аналитика </a> </li>
         <li class="nav-items">
 		<a class="nav-link" href="{{ url_for('select_table') }}"> Просмотр таблиц </a> </li>
+        <li class="nav-items">
+		<a class="nav-link" href="{{ url_for('tree_conflicts') }}"> Дерево конфликтов</a> </li>
 	</ul>
 </div>
 
